--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,13 +3,54 @@ header {
     width: 100%;
     height: 70px;
     border-radius: 15px;
-    background-color: hsl(226, 25%, 17%);
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 50px;
+    
+    &.dark {
+        background-color: hsl(226, 25%, 17%);
+    }
+
+    &.light {
+        background-color: hsl(200, 60%, 99%);
+    }
 }
 
 .title-extensions {
-    fill: white;
+    &.dark {
+        fill: white;
+    }
+
+    &.light {
+        fill: #091540;
+    }
+}
+
+.theme-button {
+    height: 40px;
+    width: 40px;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+
+    &.dark {
+        background-color: hsl(225, 23%, 24%);
+        background-image: url(../../assets/images/icon-sun.svg);
+
+        &:hover {
+            background-color: hsl(226, 11%, 37%);
+        }
+    }
+
+    &.light {
+        background-color: hsl(0, 0%, 93%);
+        background-image: url(../../assets/images/icon-moon.svg);
+
+        &:hover {
+            background-color: hsl(0, 0%, 78%);
+        }
+    }
 }
